adjsut spacing issue on media section

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -690,6 +690,10 @@ a {
 .media-menu {
     padding: 0 20px;
     padding-top: 50px;
+    @media all and (min-width: 1200px) {
+        padding: 0;
+        padding-top: 50px;
+    }
 }
 
 .media-menu h2,
@@ -767,8 +771,11 @@ a {
         @media all and (min-width: 500px) {
             display: flex;
             justify-content: space-between;
-            max-width: 1100px;
+            max-width: 1110px;
             margin: 0 auto;
+        }
+        @media all and (min-width: 1200px) {
+            max-width: 1138px;
         }
     }
     .media-tab {
